tdf#115218 framework: decouple HiddenForConversion from Hidden

Commit 4a0f506f0d8c2a017f0cf880481d3c0c32a48909 (framework: disable
layout manager in hidden frames, 2018-01-17) added support for bypassing
the framework layout manager for doc conversion purposes, but the Hidden
flag has the meaning that the doc is only initially hidden, it may be
visible later, so reusing Hidden broke mail merge.

Introduce a dedicated HiddenForConversion flag, clients interested in
improved performance can opt in for that, and this way behavior for
Hidden is not changing.

Change-Id: If7537197900f8819f714b164c9e056b4ae69286d