framework/source/services/taskcreatorsrv.cxx
@@ -130,7 +130,7 @@ css::uno::Reference< css::uno::XInterface > SAL_CALL TaskCreatorService::createI
     bool                                  bSupportPersistentWindowState = lArgs.getUnpackedValueOrDefault(ARGUMENT_SUPPORTPERSISTENTWINDOWSTATE , false );
     bool                                  bEnableTitleBarUpdate         = lArgs.getUnpackedValueOrDefault(ARGUMENT_ENABLE_TITLEBARUPDATE        , true );
     // If the frame is explicitly requested to be hidden.
-    bool bHidden = lArgs.getUnpackedValueOrDefault("Hidden", false);
+    bool bHidden = lArgs.getUnpackedValueOrDefault("HiddenForConversion", false);
 
     // We use FrameName property to set it as API name of the new created frame later.
     // But those frame names must be different from the set of special target names as e.g. _blank, _self etcpp !
